Refactor Precondition, Postcondition, and Derivation to Java records
Use Java record types for immutable contract types:
- Precondition<I>: record with compact constructor validation
- Postcondition<T>: record with compact constructor validation
- Derivation<R, D>: record with defensive copy via List.copyOf()

Also updated ServiceContract to use List.copyOf() for consistency.
Removed toString() tests as records have standard formatting.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>